--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,11 @@
 [*.cs]
 intent_style = space
 indent_size = 4
+
+# IDE0003: Remove qualification
+dotnet_diagnostic.IDE0003.severity = none
+
+
+# IDE0028: Simplify collection initialization
+dotnet_diagnostic.IDE0028.severity = none
+
