--- a/LPR381-project.csproj
+++ b/LPR381-project.csproj
@@ -9,7 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="SensativityAnalysis\" />
+    <Folder Include="SensitivityAnalysis\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
